implement menus 3